--- a/website/templates/website/post.html
+++ b/website/templates/website/post.html
@@ -35,8 +35,10 @@
                 <h4 style="text-transform:capitalize ;" class="forEachRowHomePageTextHeaderMobile text-dark"> {{post.title}}
                  
                 </h4>
-                
-               
+
+                <!-- https://developers.facebook.com/docs/plugins/share-button/ -->
+                <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fwww.facebook.com%2Fgroups%2Fdeeperlifebiblechurchsingles%2F%3F__cft__[0]%3DAZW64t27v4lSZNTyrjqlLZH27XG_0jHhh4KvxXRSkx9cBDn8dOuBz_Y2Wnel3hlaORyGCrLG3G6qzxmG9rRirxtFLD6oo-qnzZMjr6qckAJZUMKtnLGWe6Malu7iqYamFtygtfV1hwQpWGhZ5wOY6ZOB6HJJsBNy_G6tL92-gAYG5z5jp37HYVwVCacWDM-zdH0%26__tn__%3D-UC%252CP-R&layout=button_count&size=small&appId=148660960575291&width=77&height=20" width="77" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+
                 <br>
                 <div class="labelContainer" >
                 <p class="forEachRowHomePageLabelstMobile">{{post.author}}</p>
@@ -46,7 +48,7 @@
              
               <p style="opacity: 30%;" class="forEachRowHomePageLabelstMobile"><i class="fas fa-eye"></i> {{post.view_count }}</p>
       
-              
+
 
             </div>
         </div>
