--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -146,11 +146,13 @@ margin-top: 4.7vh;
 
 .mediasFacebook{
 
+    font-size: 15px;
     padding-top: 1.0vh;
     transition: 0.1s ease-in-out;
 }
 .mediasTwitter{
 
+    font-size: 15px;
     padding-top: 1.1vh;
     transition: 0.1s ease-in-out;
 }
@@ -183,7 +185,7 @@ margin-top: 4.7vh;
          SUBSCRIBE
      </button>
      <div style=" text-align: center; " >
-        <a style=""  id="logo" href="{% url 'website:home' %}"> <img class="my-4 mx-auto" style="width: 250px;" src="{% static 'images/HS.png' %}" alt="Online Cushion Store"></a>
+        <a style=""  id="logo" href="{% url 'website:home' %}"> <img class="my-4 mx-auto" style="width: 250px;" src="{% static 'images/deeperLifeMarriages.png' %}" alt="Online Cushion Store"></a>
     
     
      </div>
