--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,6 +1,10 @@
 {% load static %}
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="{% static 'css/all.css' %}" />
+
 <style>
+
 
 
 @media only screen and (max-width: 765px) {
@@ -35,8 +39,9 @@
   .t{
 
     color: black !important; 
-    font-family: Helvetica !important;
-    font-size: 13px !important; 
+    font-family:  Helvetica !important;
+    font-size: 12px !important; 
+    font-weight: 200 !important;
   }
   #searchIconMobile{
 
@@ -64,7 +69,7 @@ opacity: 20%;
 
 </style>
 
-<nav   style=" background-color: #c92020; "   id="navbarMain" class="sticky-top border-top border-bottom navbar navbar-expand-lg bg-light">
+<nav   style="border-top: #eeeeee 1px solid;border-bottom: #eeeeee 1px solid; height: 50px; background-color: #c92020; background-color: #f4f5f5;"   id="navbarMain" class="sticky-top navbar navbar-expand-lg">
   <!-- <nav   style=" background-color: #c92020;"  id="navbarMain" class="navbar navbar-expand-lg  border-bottom "> -->
     
       <button style=""  id="hamburger" onclick="searchRemover()" class=" navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
