--- a/dashboard/templates/dashboard/main.html
+++ b/dashboard/templates/dashboard/main.html
@@ -6,6 +6,62 @@
 {% block content%}
 
 <div class="content">
+    
+    
+<!-- ===========================================GREETINGS ===========================================G-->
+
+
+
+
+<div class="greetingsContainer">
+
+    <img class="undrawn" src="{% static 'images/undraw_Investing_re_bov7.png' %}">
+    <div class="greetings-section-container">
+        <h1 class="greetings-header">Good Evening,  <span style="color: #6453ED;">Bob</span></h1>
+        <p class="greetings-paragraph">Here are some activities we have for yout to 
+                                        get things done for today listed bellow, enjoy!</p>
+        <a class="greetingsButton">Add New Post</a>
+    </div>
+
+    
+</div>
+
+
+<!-- ===========================================Yout Statistics ===========================================G-->
+<div class="yourStatisticsSection">
+    <h1 class="yourStatisticsSectionHeader">Your Statistics</h1>
+    <p class="yourStatisticsSectionParagraph">Here are some activities we have 
+        for yout to get things done for today listed bellow, enjoy!</p>
+</div>
+<div class="statBoxContainer">
+    <div style="background: linear-gradient(180deg, rgba(255, 0, 0, 0.72) 0%, #ED7048 100%);" class="statBoxContainer1">
+        <h1 class="statBoxContainer1Header">3984</h1>
+        <p class="statBoxContainer1Paragraph">Highest Viewed Post</p>
+    </div>
+    <div class="statBoxContainer1">
+        <h1 class="statBoxContainer1Header">234</h1>
+        <p class="statBoxContainer1Paragraph">Todays Visitors</p>
+    </div>
+    <div style="background: linear-gradient(180deg, #4880ED 0%, #11BCE1 100%);" class="statBoxContainer1">
+        <h1 class="statBoxContainer1Header">384</h1>
+        <p class="statBoxContainer1Paragraph">All Time Vistitors</p>
+    </div>
+    <div style="background: linear-gradient(191.68deg, #F44C6A 23.97%, #ED48BF 91.43%);" class="statBoxContainer1">
+        <h1 class="statBoxContainer1Header">874</h1>
+        <p class="statBoxContainer1Paragraph">Total This Month</p>
+    </div>
+
+</div>
+
+</div>
+
+
+
+
+
+
+
+    <!-- 
     <div class="content-body">
 <div class="row1 ">
 
@@ -217,5 +273,6 @@
     });
 
    
-    </script>
+    </script> -->
+
 {%endblock content%}
