--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -94,6 +94,9 @@ opacity: 20%;
   
           
           {%endfor%}
+          <li class="nav-item text-center text-bold navers">
+            <a style="color: black;" href="{% url 'dashboard:main' %}"   class="text-white t " aria-current="page" >ADMIN PANEL</a> 
+                 </li> 
   
       </div>
       <i  style="margin-right: 3vw; "  id="searchIconMobile2" class="fas fa-search text-dark"></i>
