--- a/dashboard/templates/baseManager.html
+++ b/dashboard/templates/baseManager.html
@@ -25,7 +25,7 @@
  
 </style>
 
-  <div class="container-fluid">
+  <div class="container-fluid" style="padding:0; margin:0;">
 
   {% include 'sidebar.html' %}
 
