--- a/dashboard/templates/dashboard/category_add.html
+++ b/dashboard/templates/dashboard/category_add.html
@@ -4,16 +4,19 @@
 {% block metadescription %} 
 {%endblock %} 
 {% block title %} HolinessSingles {% endblock %} 
-
 {% load crispy_forms_tags %}
-{% block content%}
-<div style="background-color: white;" class="content">
 
-    <div class=" text-justify card-profile  p-3  mb-5  blueRefund" style="background-color: white;">
+{% block content%}
+
+<div class="content">
+
+    
+
+    <div class=" text-justify  shadow p-3  mb-5  " style="background-color: white;">
         <a class="btn btn-dark" href="{% url 'dashboard:posts' %}"> Manage Post</a> 
         <a class="btn btn-dark" href="{% url 'dashboard:addPost' %}"> Add Post</a> 
-    
-        <h1 class="text-center">Add Book</h1>
+        <h1 class="text-center">Add Category</h1>
+
     <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.media }}
