--- a/dashboard/templates/dashboard/category_delete.html
+++ b/dashboard/templates/dashboard/category_delete.html
@@ -5,22 +5,19 @@
 {%endblock %} 
 {% block title %} HolinessSingles {% endblock %} 
 
-{% load crispy_forms_tags %}
-{% block content%}
-<div style="background-color: white;" class="content">
 
-    <div class=" text-justify card-profile  p-3  mb-5  blueRefund" style="background-color: white;">
+{% block content%}
+<div class="content">
+
+    <div class=" text-justify  shadow p-3  mb-5  blueRefund" style=" background-color: white; width: 80%;">
         <a class="btn btn-dark" href="{% url 'dashboard:posts' %}"> Manage Post</a> 
         <a class="btn btn-dark" href="{% url 'dashboard:addPost' %}"> Add Post</a> 
-    
-        <h1 class="text-center">Add Book</h1>
+    <h1 class="text-center">Add Book</h1>
     <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.media }}
-        {{ form | crispy }}
-        <button class="btn btn-success" type="submit">Save</button>
+       <p class="text-center">Are you sire you want ot delete <b>"{{deleteCategory.name}}"</b> <button class="btn btn-danger text-center" type="submit">Confirm</button></p>
+        <p class="text-center">{{posts_category|length}} Posts will also be deleted</p>
     </form>
     </div>
     </div>
     {% endblock content %}
-    
