--- a/dashboard/templates/dashboard/posts.html
+++ b/dashboard/templates/dashboard/posts.html
@@ -21,43 +21,63 @@
 {%endfor%}
 {%endif%}
 <link rel="stylesheet" href="{% static 'css/posts.css' %}" />
-<div style="background-color: white !important;" class="content">
-
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Palanquin+Dark&display=swap" rel="stylesheet">
    
         
   
-<div class="container postRow">
-    <button class="btn btn-dark">Manage Posts</button>
-    <a class="btn btn-dark" href="{% url 'dashboard:addPost' %}"> Add Post</a> 
-    <table class="table">
-        <h6 class="p-3 border-bottom text-success"> Posts <br>{{post_listed|length}}</h6>
+  <div class="content">
+
+    <!-- <a class="btn btn-dark" href="{% url 'dashboard:addPost' %}"> Add Post</a>  -->
+
+
+    <div style="width: 90%;" class="tableHeaderContainer">
+      <div style="float: left !important;" class="postSection">
+        <h1>Posts</h1>
+        <a href="" class="btn btn-info">Add Post</a>
+        <input>
+      </div>
+
+      <div class="figuresSection">
+        adf
+        adsf
+        adf
+      </div>
+
+
+    </div>
+<div class="tableConatiner">
+    <table  class="myTableStyling table table-borderless">
+        <!-- <h6 class="p-3  text-success"> Posts <br>{{post_listed|length}}</h6> -->
         <thead class="thead-dark">
           <tr>
-              <th scope="col">Image</th>
-            <th scope="col">Title</th>
-            <th scope="col">Views</th>
-            <th scope="col">Category</th>
-            <th scope="col">Status</th>
-            <th scope="col">Views</th>
+              <th scope="">Photo</th>
+            <th class="titleCol" scope="">Title</th>
+            <!-- <th scope="">Views</th> -->
+            <th  scope="">Category</th>
+            <th scope="cl">Status</th>
+            <th scope="">Actions</th>
           </tr>
         </thead>
         <tbody>
             {% for p in post_listed %}
           <tr class="">
-            <td><img class="" style="width: 60px;" src="{{p.image.url}}"></td>
-            <td>{{p.title}}</td>
-            <td>{{p.view_count}}</td>
-            <td>{{p.category}}</td>
+            <td><a href="{% url 'dashboard:editPost' p.category.slug p.slug %}"><img class="" style="width: 60px; border-radius: 8px;" src="{{p.image.url}}"></a></td>
+            <td style="opacity: 70%;">{{p.title}}</td>
+            <!-- <td>{{p.view_count}}</td> -->
+            <td class="catCol"> {{p.category}}</td>
             <td>
             {% if p.published %} 
-                <a href="{% url 'dashboard:unpublishPost' p.category.slug p.slug %}"  class="btn btn-danger">Unpublish</a>
+                <a href="{% url 'dashboard:unpublishPost' p.category.slug p.slug %}"  class="buttonUnPublish">unpublish</a>
             {%else%}
-                <button  class="btn btn-success">Publish</button>
+            <a href="{% url 'dashboard:publishPost' p.category.slug p.slug %}"  class="buttonPublish">publish</a>
             {% endif %}
             </td>
             <td>
-                <a href="{% url 'dashboard:editPost' p.category.slug p.slug %}">Edit</a><br>
-                <a class="text-danger" href="{% url 'dashboard:deletePost' p.category.slug p.slug %}">Delete</a><br>
+                <a href="{% url 'dashboard:editPost' p.category.slug p.slug %}"><i class="far fa-edit"></i></a>
+                <a class="text-danger" href="{% url 'dashboard:deletePost' p.category.slug p.slug %}"><i class="fas fa-trash"></i></a>
           </td>
           </tr>
           {% endfor %}
